// Vitest Snapshot v1

exports[`Button > Button baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-61a49c84=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-61a49c84=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  
</div>
`;

exports[`Button > Button blockVue demo works fine 1`] = `
<div
  class="row"
  data-v-75d4286a=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block"
    data-v-75d4286a=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button ghostVue demo works fine 1`] = `
<div
  class="row"
  data-v-511c0528=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--ghost"
    data-v-511c0528=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      幽灵按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle t-button--ghost"
    data-v-511c0528=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      幽灵按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--ghost"
    data-v-511c0528=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      幽灵按钮
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button groupVue demo works fine 1`] = `
<div
  class="row"
  data-v-2d21dd48=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
    data-v-2d21dd48=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
    data-v-2d21dd48=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button iconVue demo works fine 1`] = `
<div
  class="row"
  data-v-c77683a8=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
    data-v-c77683a8=""
    role="button"
    type="button"
  >
    <svg
      class="t-icon t-icon-app"
      fill="none"
      height="1em"
      style="font-size: 24px;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
        fill="currentColor"
      />
    </svg>
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--loading"
    data-v-c77683a8=""
    role="button"
    type="button"
  >
    <div
      class="t-loading"
      style="font-size: 20px;"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        style="animation-duration: 800ms; width: 20px; height: 20px;"
        version="1.1"
        viewBox="0 0 12 12"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="0"
          y="0"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <!--v-if-->
      <!---->
    </div>
    <span
      class="t-button__content"
    >
      
      加载中
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
    data-v-c77683a8=""
    role="button"
    type="button"
  >
    <svg
      class="t-icon t-icon-search"
      fill="none"
      height="1em"
      style="font-size: 24px;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M15.1 5.9a6.5 6.5 0 10-9.2 9.2 6.5 6.5 0 009.2-9.2zM4.49 4.5a8.5 8.5 0 0112.69 11.27l5.34 5.35-1.41 1.41-5.35-5.34A8.5 8.5 0 014.5 4.49z"
        fill="currentColor"
      />
    </svg>
    <span
      class="t-button__content"
    >
      <!---->
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-7c375b15=""
>
  <h1
    class="title"
    data-v-7c375b15=""
  >
    Button 按钮
  </h1>
  <p
    class="summary"
    data-v-7c375b15=""
  >
    按钮用于开启一个闭环的操作任务，如“删除”对象、“购买”商品等。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="row"
        data-v-61a49c84=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-61a49c84=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
          data-v-61a49c84=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
          data-v-61a49c84=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
      </div>
      <div
        class="row"
        data-v-61a49c84=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
          data-v-61a49c84=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            描边按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
          data-v-61a49c84=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            文字按钮
            
          </span>
          <!---->
        </button>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        图标按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-7c375b15=""
        data-v-c77683a8=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-c77683a8=""
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            style="font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--loading"
          data-v-c77683a8=""
          role="button"
          type="button"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            <svg
              class="t-loading__gradient t-icon-loading"
              height="1em"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
              version="1.1"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <foreignobject
                height="12"
                width="12"
                x="0"
                y="0"
              >
                <div
                  class="t-loading__gradient-conic"
                />
              </foreignobject>
            </svg>
            <!--v-if-->
            <!---->
          </div>
          <span
            class="t-button__content"
          >
            
            加载中
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
          data-v-c77683a8=""
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            style="font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M15.1 5.9a6.5 6.5 0 10-9.2 9.2 6.5 6.5 0 009.2-9.2zM4.49 4.5a8.5 8.5 0 0112.69 11.27l5.34 5.35-1.41 1.41-5.35-5.34A8.5 8.5 0 014.5 4.49z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        幽灵按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-511c0528=""
        data-v-7c375b15=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--ghost"
          data-v-511c0528=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            幽灵按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle t-button--ghost"
          data-v-511c0528=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            幽灵按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--ghost"
          data-v-511c0528=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            幽灵按钮
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        组合按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-2d21dd48=""
        data-v-7c375b15=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
          data-v-2d21dd48=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-2d21dd48=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        通栏按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-75d4286a=""
        data-v-7c375b15=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block"
          data-v-75d4286a=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        按钮禁用态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="row"
        data-v-096a7265=""
      >
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--disabled"
          data-v-096a7265=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle t-button--disabled"
          data-v-096a7265=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--disabled"
          data-v-096a7265=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
      </div>
      <div
        class="row"
        data-v-096a7265=""
      >
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--disabled"
          data-v-096a7265=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            描边按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle t-button--disabled"
          data-v-096a7265=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            文字按钮
            
          </span>
          <!---->
        </button>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        按钮尺寸
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-0a874498=""
        data-v-7c375b15=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-0a874498=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮 48
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
          data-v-0a874498=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮 40
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-small t-button--base t-button--primary t-button--rectangle"
          data-v-0a874498=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮 32
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
          data-v-0a874498=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮 28
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        按钮形状
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="row"
        data-v-3fc3ed04=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-3fc3ed04=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          aria-label="搜索"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
          data-v-3fc3ed04=""
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            style="font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M15.1 5.9a6.5 6.5 0 10-9.2 9.2 6.5 6.5 0 009.2-9.2zM4.49 4.5a8.5 8.5 0 0112.69 11.27l5.34 5.35-1.41 1.41-5.35-5.34A8.5 8.5 0 014.5 4.49z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--round"
          data-v-3fc3ed04=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          aria-label="搜索"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--circle"
          data-v-3fc3ed04=""
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            style="font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M15.1 5.9a6.5 6.5 0 10-9.2 9.2 6.5 6.5 0 009.2-9.2zM4.49 4.5a8.5 8.5 0 0112.69 11.27l5.34 5.35-1.41 1.41-5.35-5.34A8.5 8.5 0 014.5 4.49z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
      </div>
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block rectangle-button"
        data-v-3fc3ed04=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          填充按钮
          
        </span>
        <!---->
      </button>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        按钮主题
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="row"
        data-v-42dcdba6=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
          data-v-42dcdba6=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--default t-button--rectangle"
          data-v-42dcdba6=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            描边按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--text t-button--default t-button--rectangle"
          data-v-42dcdba6=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            文字按钮
            
          </span>
          <!---->
        </button>
      </div>
      <div
        class="row"
        data-v-42dcdba6=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-42dcdba6=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
          data-v-42dcdba6=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            描边按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
          data-v-42dcdba6=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            文字按钮
            
          </span>
          <!---->
        </button>
      </div>
      <div
        class="row"
        data-v-42dcdba6=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle"
          data-v-42dcdba6=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--danger t-button--rectangle"
          data-v-42dcdba6=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            描边按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--text t-button--danger t-button--rectangle"
          data-v-42dcdba6=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            文字按钮
            
          </span>
          <!---->
        </button>
      </div>
      <div
        class="row"
        data-v-42dcdba6=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
          data-v-42dcdba6=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--light t-button--rectangle"
          data-v-42dcdba6=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            描边按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--text t-button--light t-button--rectangle"
          data-v-42dcdba6=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            文字按钮
            
          </span>
          <!---->
        </button>
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`Button > Button shapeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-3fc3ed04=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
      data-v-3fc3ed04=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      aria-label="搜索"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
      data-v-3fc3ed04=""
      role="button"
      type="button"
    >
      <svg
        class="t-icon t-icon-search"
        fill="none"
        height="1em"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M15.1 5.9a6.5 6.5 0 10-9.2 9.2 6.5 6.5 0 009.2-9.2zM4.49 4.5a8.5 8.5 0 0112.69 11.27l5.34 5.35-1.41 1.41-5.35-5.34A8.5 8.5 0 014.5 4.49z"
          fill="currentColor"
        />
      </svg>
      <span
        class="t-button__content"
      >
        <!---->
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--round"
      data-v-3fc3ed04=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      aria-label="搜索"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--circle"
      data-v-3fc3ed04=""
      role="button"
      type="button"
    >
      <svg
        class="t-icon t-icon-search"
        fill="none"
        height="1em"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M15.1 5.9a6.5 6.5 0 10-9.2 9.2 6.5 6.5 0 009.2-9.2zM4.49 4.5a8.5 8.5 0 0112.69 11.27l5.34 5.35-1.41 1.41-5.35-5.34A8.5 8.5 0 014.5 4.49z"
          fill="currentColor"
        />
      </svg>
      <span
        class="t-button__content"
      >
        <!---->
      </span>
      <!---->
    </button>
  </div>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block rectangle-button"
    data-v-3fc3ed04=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
  
</div>
`;

exports[`Button > Button sizeVue demo works fine 1`] = `
<div
  class="row"
  data-v-0a874498=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
    data-v-0a874498=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 48
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
    data-v-0a874498=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 40
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-small t-button--base t-button--primary t-button--rectangle"
    data-v-0a874498=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 32
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
    data-v-0a874498=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 28
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-096a7265=""
  >
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-096a7265=""
  >
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  
</div>
`;

exports[`Button > Button themeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-42dcdba6=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--default t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--default t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-42dcdba6=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-42dcdba6=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--danger t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--danger t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-42dcdba6=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--light t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--light t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  
</div>
`;
